--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -782,60 +782,79 @@ img {
 */
 
 /* full width container */
+.theme-privacy-container,
 .emtheme-cookie-container {
 	position: fixed;
-	bottom: 60px;
+	bottom: 0;
 	width: 100%;
 
 	/* centering content */
-	display: flex;
-	justify-content: center;
-	align-content: center;
+	/*display: flex;*/
+	/*justify-content: center;*/
+	/*align-content: center;*/
+
 
 	font-size: 1.6rem;
 	z-index: 100;
 }
 
 /* cookie container */
+.theme-privacy,
 .emtheme-cookie {
-	display: inline-flex;
-	min-width: 30%;
-	max-width: 60%;
-	padding: 2rem;
 
+	display: inline-block;
+
+	margin-left: 60%;
+	margin-right: 10%;
+	/*display: inline-flex;*/
+	/*min-width: 30%;*/
+	/*max-width: 60%;*/
+	padding: 2rem;
+	padding-bottom: 5rem;
+	/*border: double 3px black;*/
 	justify-content: space-between;
-	border-radius: 10px;
-	background-color: red;
-	opacity: 0;
+	/*border-radius: 10px;*/
+	/*background-color: red;*/
+	/*opacity: 0;*/
+	border-bottom: none !important;
 }
 
+.theme-privacy-text,
 .emtheme-cookie-text {
 	align-self: center;
-	padding-right: 2rem;
+	/*padding-right: 5rem;*/
+	margin-right: 10rem;
 	user-select: none;
 }
 
-.emtheme-cookie-text > p {
-	margin-bottom: 0;
+.theme-privacy-text > p:first-child {
+	margin-top: 0;
+}
 }
 
+.theme-privacy-button,
 .emtheme-cookie-button {
-	padding: 0.5rem 2rem;
+	padding: 1rem 2.5rem;
 
-	align-self: center;
+	padding: 1rem 2rem 0.8rem 2rem;
+
+	float: right;
+	/*align-self: center;*/
 	
 	border: none;
-	border-radius: 10px;
+	/*border-radius: 10px;*/
 	font-size: 2rem;
 
 	cursor: pointer;
 	user-select: none;
 }
 
+.theme-privacy-button:focus,
 .emtheme-cookie-button:focus {
 	outline:none;
 }
 
+.theme-privacy-fade,
 .emtheme-cookie-fade {
 	opacity: 0 !important;
 	transition: opacity 1s;
