--- a/assets/css/pub/theme-mobile.css
+++ b/assets/css/pub/theme-mobile.css
@@ -419,22 +419,21 @@ p:empty {
 
 
 /* privacy info window */
-.theme-privacy-container,
+/*.theme-privacy-container,
 .emtheme-cookie-container {
 	position: fixed;
 	bottom: 90px;
 	width: 100%;
 
-	/* centering content */
 	display: flex;
 	justify-content: center;
 	align-content: center;
 
 	font-size: 1.6rem;
-}
+}*/
 
 /* cookie container */
-.theme-privacy,
+/*.theme-privacy,
 .emtheme-cookie {
 	display: inline-flex;
 	flex-direction: column-reverse;
@@ -444,10 +443,9 @@ p:empty {
 
 	justify-content: space-between;
 	border-radius: 10px;
-	/*opacity: 0;*/
-}
+}*/
 
-.theme-privacy-text,
+/*.theme-privacy-text,
 .emtheme-cookie-text {
 	align-self: center;
 	padding-right: 2rem;
@@ -461,9 +459,9 @@ p:empty {
 
 .theme-privacy-text > p:first-child {
 	margin-top: 0;
-}
+}*/
 
-.theme-privacy-button,
+/*.theme-privacy-button,
 .emtheme-cookie-button {
 	padding: 0.5rem 2rem;
 	margin-top: 2rem;
@@ -476,17 +474,72 @@ p:empty {
 
 	cursor: pointer;
 	user-select: none;
-}
+}*/
 
-.theme-privacy-button:focus,
+/*.theme-privacy-button:focus,
 .emtheme-cookie-button:focus {
 	outline:none;
-}
+}*/
 
-.theme-privacy-fade,
+/*.theme-privacy-fade,
 .emtheme-cookie-fade {
 	opacity: 0 !important;
 	transition: opacity 1s;
+}*/
+
 }
 
+.theme-privacy-container {
+	max-height: 10rem;
+	border: none !important;
+
+	font-size: 1.6rem;
+	z-index: 100;
+	transition: max-height 1s;
+}
+
+.theme-privacy {
+
+	display: flex;
+	flex-direction: row-reverse;
+
+	justify-content: space-around;
+
+	padding: 1rem 0;
+}
+
+.theme-privacy-text {
+	display: flex;
+	align-items: center;
+	margin: 0 1rem;
+	font-size: 1.2rem;
+}
+
+.theme-privacy-text > p:first-child {
+	margin-top: 0;
+}
+
+.theme-privacy-text > p:last-child {
+	margin-bottom: 0;
+}
+
+/*}*/
+
+.theme-privacy-button {
+	align-self: center;
+	border: none;
+	cursor: pointer;
+	user-select: none;
+	padding: .5rem 2rem;
+	font-size: 1.6rem;
+	margin: 0 2rem;
+	/*background-color: red !important;*/
+}
+
+.theme-privacy-button:focus {
+	outline:none;
+}
+
+.theme-privacy-fade {
+	max-height: 0;
 }
